--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -19,43 +19,14 @@ body {
   background-color: #f4f1ec;
   font-size: 24px;
   font-family: 'Source Sans Pro', Sans-serif;
-  
-}
-
-nav {
-  display: flex;
-  justify-content: space-between;
-  background-color: #4056A1;
-  color: white;
-  height: 120px;
-  width: 100%;
-  padding-left: 1.5em;
-  padding-right: 1.5em;
-  padding-top: 1.5em;
-  overflow: hidden;
-  position: fixed;
-  top: 0;
 }
 
 main {
-}
-header {
-  margin-top: 120px;  
-  height: 400px;
-  width: 100%;
   display: flex;
   justify-content: center;
-  flex-direction: column;
   align-items: center;
-  background-color: #14224e;
-  background-image: url('../images/bg-leaves.png');
+  flex-direction: column;
+  margin-left: 5%;
+  margin-right: 5%;
+  
 }
-
-.profile {
-}
-/*
- * Additional CSS can be defined below or in other CSS files, as per instructions
- */
- .logo {
-  font-family: 'Bungee', cursive;
- }
