changed link and hover styles, added form

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -27,6 +27,8 @@ main {
   align-items: center;
   flex-direction: column;
   margin-left: 5%;
-  margin-right: 5%;
-  
+  margin-right: 5%; 
+}
+h2 {
+  color: #14224e;
 }
