--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -8,7 +8,7 @@
 #tweet-text {
   border-bottom: 5px;
   width: 100%;
-  padding: 0 0 1em;
+  padding: 0.5em;
   margin: 0.5em 0em 0.5em;
   border: none;
   background: none;
@@ -19,6 +19,9 @@
 
 .counter {
   font-family: 'Bungee', cursive;
+}
+.counterMinus {
+  color: red;
 }
 
 button {
@@ -35,9 +38,11 @@ button:hover {
   color: #14224e;
   background-color: #4056A1;
 }
+
 #tweet-below {
   display: flex;
   justify-content: space-between;
   padding: 0em 0em 1em;
   /* border-top: 5px solid #545149; */
 }
+
