--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -6,7 +6,7 @@ header.top {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  background-color: #14224e;
+  background-color: #104a73;
   background-image: url('../images/bg-leaves.png');
 }
 h2.name {
