--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -2,16 +2,45 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #4056A1;
+  background-color: #20629c;
   color: white;
   height: 120px;
   width: 100%;
-  padding-left: 1.5em;
-  padding-right: 1.5em;
+  padding: 0 1.5em;
   overflow: hidden;
-  position: absolute;
+  position: fixed;
   top: 0;
+  /* animation: fadeIn 5s;
+  -webkit-animation: fadeIn 5s;
+  -moz-animation: fadeIn 5s;
+  -o-animation: fadeIn 5s;
+  -ms-animation: fadeIn 5s; */
 }
+/* @keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-moz-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-webkit-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-o-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-ms-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+}*/
 a:link {
   text-decoration: none;
 }
@@ -20,13 +49,22 @@ a:link {
   position: relative;
 }
 #arrow-icon {
-  color: #8797ca;
+  color: #9cd5f6;
   display: flex;
   justify-content: center;
 }
-#arrow-icon:hover {
-  color: white;
-}
 #logo {
   font-family: 'Bungee', cursive;
+}
+img.profile {
+  width:300px;
+  height:300px;
+  object-fit:cover;
+  border-radius:50%
+}
+img.profilesm {
+  width:50;
+  height:50px;
+  object-fit:cover;
+  border-radius:50%
 }
