--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -12,22 +12,30 @@
   margin: 0.5em 0em 0.5em;
   border: none;
   background: none;
-  border-bottom: 5px solid #545149;
+  border-bottom: 5px solid #104a73;
   resize: none;
   overflow-y: auto;
+  border-radius: 5px;
+  transition-duration: 0.2s;
+}
+
+#tweet-text:focus {
+  background-color: white;
+  transition-duration: 0.2s;
 }
 
 .counter {
   font-family: 'Bungee', cursive;
 }
+
 .counterMinus {
-  color: red;
+  color: #ac8339;
 }
 
 button {
   font-family: 'Bungee', cursive;
   color: white;
-  background-color: #4056A1;
+  background-color: #104a73;
   display:inline-block;
   padding: 0.2em 0.5em;
   border: 0;
@@ -35,8 +43,8 @@ button {
 }
 
 button:hover {
-  color: #14224e;
-  background-color: #4056A1;
+  color: #104a73;
+  background-color: white;
 }
 
 #tweet-below {
