--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -13,7 +13,7 @@ article:hover {
   transition-duration: 0.2s;
 }
 
-.tweets-container {
+#tweets-container {
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -44,7 +44,9 @@ p {
 }
 
 .username {
-  font-weight:lighter;
+  display: flex;
+  align-items: center;
+  font-weight: lighter;
 }
 
 .icons:hover {
@@ -57,5 +59,5 @@ p {
 }
 
 .profileimg {
-
+  padding-right: 0.5em;
 }
