--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -26,10 +26,15 @@ main {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin: 0% 5% 1em 5%;
+  margin: 0 5% 1em 5%;
 }
 
 h2 {
   color: #104a73;
   text-align: center;
+}
+
+a:link {
+  text-decoration: none;
+  cursor: pointer;
 }
