--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -10,6 +10,7 @@ nav {
   overflow: hidden;
   position: fixed;
   top: 0;
+  z-index: 1;
   /* animation: fadeIn 5s;
   -webkit-animation: fadeIn 5s;
   -moz-animation: fadeIn 5s;
