changed styles slightly, error message now slides down and hides

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,6 +1,6 @@
 header.top {
-  margin-top: 120px;
-  height: 400px;
+  padding-top: 120px;
+  height: 520px;
   width: 100%;
   display: flex;
   justify-content: center;
