--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -11,6 +11,7 @@ nav {
   position: fixed;
   top: 0;
   z-index: 1;
+  /* opacity: 50%; */
   /* animation: fadeIn 5s;
   -webkit-animation: fadeIn 5s;
   -moz-animation: fadeIn 5s;
