--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -56,4 +56,8 @@ button:hover {
 
 #error {
   border: 3px solid red;
+  background-color: white;
+  text-align: center;
+  margin-bottom: 1em;
+  padding: 0.5em;
 }
