--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -26,7 +26,9 @@ main {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin: 0 5% 1em 5%;
+  margin: 1em 5% 1em 5%;
+  overflow-y: hidden;
+  -webkit-overflow-scrolling: touch;
 }
 
 h2 {
@@ -34,7 +36,11 @@ h2 {
   text-align: center;
 }
 
-a:link {
+a:link, a:visited {
   text-decoration: none;
   cursor: pointer;
+}
+
+.fade {
+  opacity: 50%;
 }
