--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -51,12 +51,15 @@ button:hover {
   display: flex;
   justify-content: space-between;
   padding: 0em 0em 1em;
-  /* border-top: 5px solid #545149; */
 }
 
 #error {
-  border: 3px solid red;
-  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 3px solid #ac8339;
+  background-color: #f6cd41;
+  color: #624a10;
   text-align: center;
   margin-bottom: 1em;
   padding: 0.5em;
