--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -10,7 +10,11 @@
   overflow: hidden;
   position: fixed;
   top: 0;
-  z-index: 1;
+  z-index: 2;
+}
+
+.fadenav {
+  z-index: 2;
 }
 
 #writenew {
