--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -6,7 +6,7 @@
   color: white;
   height: 120px;
   width: 100%;
-  padding: 0 1.5em;
+  padding: 0 5% 0 5%;
   overflow: hidden;
   position: fixed;
   top: 0;
@@ -20,7 +20,7 @@
 #writenew {
   padding-top: 1em;
   position: relative;
-  font-size: 12pt;
+  font-size: 18pt;
   cursor: pointer;
 }
 
@@ -37,6 +37,7 @@
   right: 10px;
   z-index: 1;
   font-size: 40pt;
+  opacity: 75%;
 }
 
 #logo, a:link, a:visited {
