--- a/public/styles/responsive.css
+++ b/public/styles/responsive.css
@@ -53,10 +53,10 @@
       display: none;
       position: fixed;
       bottom: 10px;
-      right: 10px;
+      right: 29%;
+      /* right: 10px; */
       z-index: 1;
       font-size: 64pt;
-      /* right: 31%; */
     }
 
     #logo {
