--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -8,6 +8,7 @@
 #tweet-text {
   border-bottom: 5px;
   width: 100%;
+  height: 2em;
   padding: 0.5em;
   margin: 0.5em 0em 0.5em;
   border: none;
@@ -17,6 +18,7 @@
   overflow-y: auto;
   border-radius: 5px;
   transition-duration: 0.2s;
+  
 }
 
 #tweet-text:focus {
