--- a/public/styles/responsive.css
+++ b/public/styles/responsive.css
@@ -1,70 +1,121 @@
-  /* Smartphones: minimum width of 320px to maximum width of around 420px */
-  /* @media only screen and (min-width: 320px) and (max-width: 420px) {
-    
-  } */
+/* Smartphones: minimum width of 320px to maximum width of around 420px */
+/* @media only screen and (min-width: 320px) and (max-width: 420px) {
+  
+} */
 
-  /* Another smartphone breakpoint is maximum width of around 420px */
-  @media only screen and (max-width: 420px) {
-    /* short header */
-    /* bigger font */
-    /* up-arrow in middle */
-    body {
-      font-size: 42px;
-    }
-    
-    main {
-     
-    }
+/* Layout and styling changed for screens with maximum width of 420px (smartphones)*/
+@media only screen and (max-width: 420px) {
+  body {
+    font-size: 18pt;
+  }
+  main {
+    padding: 0.2em 1% 0.2em 1%;
+  }
+  #navbar {
+    flex-direction: column;
+    justify-content: center;
+    position: absolute;
+  }
+  #logo {
+    font-size: 36pt;
+  }
+  #writenew {
+    padding: 0;
+  }
+  h4.light {
+    margin: 0;
+    font-size: 16pt;
+  }
+  h2 {
+    font-size: 18pt;
+  }
+  header.top {
+    height: 230px;
+    margin-top: 120px;
+    padding: 10px;
+    align-items: center;
+  }
+  footer {
+    padding: 0.5em 0.5em 0 0.5em;
+    font-size: 12pt;
+  }
+  img.profile {
+    width: 150px;
+    height: 150px;
+  }
+  header {
+    flex-direction: column;
+    align-items: center;
+    font-size: 16pt;
+  }
+  p {
+    font-size: 16pt;
+  }
+  article {
+    margin-bottom: 0.2em;
+  }
+  p.tweet-text {
+    /* margin: 0; */
+    padding: 0;
+  }
+  .username {
+    font-weight: normal;
+  }
+  .profileimg {
+    padding-right: 1em;
+  }
+  #tweet-text {
+    width: 100%;
+    height: 6em;
+  }
+}
+
+/* Layout and styling changed for screens with minimum width of 1024px (laptops/desktops)*/
+@media only screen and (min-width: 1024px) {
+  #navbar {
+    font-size: 42pt;
+    padding: 0;
+  }
+  
+  header.top {
+    padding-top: 120px;
+    width: 33%;
+    height: 100%;
+    position: fixed;
+    justify-content: space-evenly;
+  }
+  
+  body {
+    display: flex;
+    flex-direction: row;
+    padding: 0;
+  }
+  
+  main {
+    width: 100%;
+    margin: 120px 0 0 33%;
+    padding: 1em;
   }
 
-  /* Another tablet breakpoint is maximum width of 1024px */
-  @media only screen and (min-width: 768px) and (max-width: 1024px) {
-    
+  #up-arrow {
+    display: none;
+    position: fixed;
+    bottom: 10px;
+    right: 29%;
+    z-index: 1;
+    font-size: 64pt;
   }
 
-  /* Laptops / Desktops: minimum width of 1024px */
-  @media only screen and (min-width: 1024px) {
-    #navbar {
-      font-size: 42pt;
-      padding: 0;
-    }
-    
-    header.top {
-      padding-top: 120px;
-      width: 33%;
-      height: 100%;
-      position: fixed;
-      justify-content: space-evenly;
-    }
-    
-    body {
-      display: flex;
-      flex-direction: row;
-      padding: 0;
-    }
-    
-    main {
-      width: 100%;
-      margin: 120px 0 0 33%;
-      padding: 1em;
-    }
-
-    #up-arrow {
-      display: none;
-      position: fixed;
-      bottom: 10px;
-      right: 29%;
-      /* right: 10px; */
-      z-index: 1;
-      font-size: 64pt;
-    }
-
-    #logo {
-      width: 33%;
-      text-align: center;
-    }
-
-    #writenew {
-      padding-right: 1.5em;
-    }
+  #logo {
+    width: 33%;
+    text-align: center;
   }
+
+  #writenew {
+    padding-right: 1.5em;
+  }
+}
+
+@media print {
+
+}
