--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -6,6 +6,7 @@ article {
   padding: 0.5em;
   border-radius: 5px;
   background-image: url('../images/bg-leaves.png');
+  word-wrap: break-word;
 }
 
 article:hover {
