--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -8,7 +8,7 @@
 #tweet-text {
   border-bottom: 5px;
   width: 100%;
-  height: 2em;
+  height: 5em;
   padding: 0.5em;
   margin: 0.5em 0em 0.5em;
   border: none;
@@ -42,11 +42,17 @@ button {
   padding: 0.2em 0.5em;
   border: 0;
   transition: all 0.2s;
+  border-radius: 5px;
 }
 
 button:hover {
   color: #104a73;
   background-color: white;
+}
+
+button:active {
+  background-color: #627b94;
+  border: 3px solid #104a73;
 }
 
 #tweet-below {
