--- a/public/styles/responsive.css
+++ b/public/styles/responsive.css
@@ -1,7 +1,4 @@
-/* Smartphones: minimum width of 320px to maximum width of around 420px */
-/* @media only screen and (min-width: 320px) and (max-width: 420px) {
-  
-} */
+/* This file contains responsive design changes for screens of different sizes */
 
 /* Layout and styling changed for screens with maximum width of 420px (smartphones)*/
 @media only screen and (max-width: 420px) {
@@ -55,7 +52,6 @@
     margin-bottom: 0.2em;
   }
   p.tweet-text {
-    /* margin: 0; */
     padding: 0;
   }
   .username {
@@ -67,6 +63,12 @@
   #tweet-text {
     width: 100%;
     height: 6em;
+  }
+  #up-arrow {
+    right: 43%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
@@ -98,7 +100,6 @@
   }
 
   #up-arrow {
-    display: none;
     position: fixed;
     bottom: 10px;
     right: 29%;
@@ -113,6 +114,10 @@
 
   #writenew {
     padding-right: 1.5em;
+  }
+
+  #tweet-text {
+    height: 4em;
   }
 }
 
